dream-car-crm/force-app/main/default/objects/Product2/fields/Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>