dream-car-crm/force-app/main/default/objects/Product2/filds/Car_Status__c.field-meta.xml
<CustomField>
    <fullName>Car_Status__c</fullName>
    <label>Car Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>