dream-car-crm/force-app/main/default/objects/Product2/fields/Discount_Made_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Made_Percent__c</fullName>
    <formula>(Sale_Price__c - Final_Sale_Price__c) / Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Made %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>