dream-car-crm/force-app/main/default/objects/Product2/fields/Fuel_Efficiency_L_100km__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Efficiency_L_100km__c</fullName>
    <label>Fuel Efficiency (L/100km)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>