dream-car-crm/force-app/main/default/objects/Product2/fields/Reserved_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>