dream-car-crm/force-app/main/default/objects/Product2/fields/Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Type__c</fullName>
    <label>Transmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Semi-Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>