dream-car-crm/force-app/main/default/objects/Product2/fields/Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_Kg__c</fullName>
    <label>Weight (Kg)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>