dream-car-crm/force-app/main/default/objects/Product2/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <label>Year of Manufacture</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>