dream-car-crm/force-app/main/default/objects/Product2/validationRules/Prevent_Edit_Sold_Cars.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Sold_Cars</fullName>
    <active>true</active>
    <description>Only Sales Manager and System Administrator can edit sold cars.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Sold&quot;,
    NOT($Profile.Name = &quot;System Administrator&quot;),
    NOT($Profile.Name = &quot;Sales Manager&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot edit sold cars. Only Sales Manager and System Administrator can modify sold car records.</errorMessage>
</ValidationRule>